welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:2: error: not found: value L
  L= nums.length
  ^arrayFront9:3: error: not found: value L
  if (L<4) {
      ^arrayFront9:4: error: not found: value L
    for (i<-0 to L-1) {
                 ^